tests/paczka1/fuzzy1/10000733.err
Error in line 5: S625 S579 26,0
Error in line 2: OQVT A178 25,4
Error in line 12: YVG4S8CDYdf S625 638,7
Error in line 9: S625 A178 51,7
Error in line 16: S625 S625 97,4
Error in line 19: YVG4S8CDYdf S625 71,5
Error in line 31: YVG4S8CDYdf S579 73,0
